--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -11,7 +11,7 @@ services:
       - "${WEB_PORT:-80}:8000"
     environment:
       NODE_ENV: production
-      MONGO_URL: mongodb://db:27017/mern-starter
+      MONGO_URL: "mongodb://ikagua:aB/987654321@ds119795.mlab.com:19795/ikagia"
   db:
     image: mongo:latest
     volumes:
