--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
     environment:
       NODE_ENV: development
       MONGO_URL: mongodb://db:27017/mern-starter
+      APP_URL : http://localhost:8000
     stdin_open: true
     tty: true
   db:
