--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,8 @@
     "classes": true
   },
   "rules": {
-     "comma-dangle": [1, "always-multiline"],
+    "no-unused-expressions": "off",
+    "comma-dangle": [1, "always-multiline"],
      "no-underscore-dangle" : 0,
      "max-len": [1, 180, 4],
      "arrow-body-style": [0],
