--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "classes": true
   },
   "rules": {
+    "no-multi-spaces": "off",
     "no-unused-expressions": "off",
     "comma-dangle": [1, "always-multiline"],
      "no-underscore-dangle" : 0,
