--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "react-router": "^3.2.1",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
-    "sanitize-html": "^1.11.4"
+    "sanitize-html": "^1.11.4",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "ava": "^0.15.2",
