--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,8 @@ services:
     tty: true
   db:
     image: mongo:latest
+    ports:
+      - "27019:27017"
     volumes:
       - dbdata:/data/db
 volumes:
