--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "react-redux": "^4.4.5",
     "react-router": "^3.2.1",
     "redux": "^3.5.2",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.0.1",
     "redux-thunk": "^2.1.0",
     "sanitize-html": "^1.11.4",
     "winston": "^3.2.1"
