--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,8 @@
     "classes": true
   },
   "rules": {
+    "one-var" : "off",
+    "key-spacing" : "off",
     "no-multi-spaces": "off",
     "no-unused-expressions": "off",
     "comma-dangle": [1, "always-multiline"],
