--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "lint": "eslint client server"
   },
   "pre-commit": [
-    "lint",
-    "test"
+    "lint"
   ],
   "repository": {
     "type": "git",
@@ -91,6 +90,7 @@
     "mock-css-modules": "^1.0.0",
     "mockgoose": "^7.3.5",
     "nock": "^8.0.0",
+    "node-sass": "^4.11.0",
     "nodemon": "^1.9.2",
     "null-loader": "^0.1.1",
     "nyc": "^6.4.4",
@@ -107,6 +107,8 @@
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.11",
     "rimraf": "^2.5.2",
+    "sass-loader": "^7.1.0",
+    "sass-resources-loader": "^2.0.0",
     "sinon": "^1.17.4",
     "style-loader": "^0.19.1",
     "supertest": "^1.2.0",
